# DisjointSet

./: CMakeLists.txt  README.md
cmake/: DisjointSetConfig.cmake.in
include/DisjointSet/: DisjointSets.h
tests/: CMakeLists.txt  modulo.cpp
